# private_domain_knowledge_search

./: .gitignore  LICENSE  README.md  mcp-rag-system-setup-20260510.txt  pyproject.toml
doc/: deployment_guide.md  mcp_contrast_test_plan.md  mcp_design.md  pipeline_design.md  project_overview_ppt.html  requirement.md  search_service_design.md  test_cases.md
doc/issue/: code_review_issues.md
inner_sdk_search_mcp/: config.py  server.py
inner_sdk_search_mcp/models/: __init__.py  schemas.py
inner_sdk_search_mcp/prompt/: assembler.py
inner_sdk_search_mcp/services/: knowledge_base.py  remote_knowledge_base.py  remote_search_engine.py
inner_sdk_search_mcp/tools/: report_feedback.py
mcp/: __init__.py  config.py  server.py
mcp/models/: schemas.py
mcp/prompt/: __init__.py  assemble_prompt.py  assembler.py  deduplicator.py  sanitizer.py
mcp/services/: __init__.py  remote_knowledge_base.py  remote_search_engine.py  search_engine.py
mcp/tools/: __init__.py  assemble_prompt.py  get_entity.py  get_spec.py  recommend_context.py  search_knowledge.py
search_service/: __init__.py  config.py  main.py  requirements.txt
search_service/api/: entities.py  feedback.py  health.py  recommend.py  router.py  search.py  specs.py
search_service/engine/: __init__.py  bm25.py  factory.py  graph.py  hybrid_searcher.py  ranker.py  vector.py
search_service/models/: __init__.py  schemas.py
search_service/pipeline/: __init__.py  chunker.py  classifier.py  code_parser.py  loader.py  orchestrator.py
test_data/: rest_api_doc.md
test_data/mock-java-sdk/: pom.xml
(+21 files in other folders)
