[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inner-sdk-search-mcp"
version = "0.2.0"
description = "私域知识自动检索 MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
inner-sdk-search-mcp = "inner_sdk_search_mcp.server:main"

[tool.setuptools.packages.find]
include = ["inner_sdk_search_mcp*"]
